# GlslOptimizerV2

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
GlslOptimizerV2/: CMakeLists.txt  LICENSE.txt
GlslOptimizerV2/include/GL/: glext.h
GlslOptimizerV2/src/code/: GlslConvert.cpp  GlslConvert.h  ir_print_glsl_visitor.cpp  ir_print_glsl_visitor.h  ir_print_ir_visitor.h
GlslOptimizerV2/src/compiler/: glsl_types.cpp  glsl_types.h
GlslOptimizerV2/src/compiler/glsl/: builtin_functions.cpp  glsl_lexer.cpp  glsl_parser.cpp  glsl_parser.h  ir_expression_operation.h  ir_expression_operation_constant.h  ir_expression_operation_strings.h  ir_hierarchical_visitor.h  ir_optimization.h
GlslOptimizerV2/src/mesa/main/: hash.h  mtypes.h
GlslOptimizerV2/src/util/: u_math.h
cmake/: 3rdparty.cmake  GlslOptimizerV2.cmake  glslOpt.cmake
glslOpt/: CMakeLists.txt
glslOpt/include/c11/: threads.h  threads_win32.h
glslOpt/src/code/: GlslConvert.cpp  GlslConvert.h  archive_from_original_GlslOptimizer.rar  ir_print_ir_visitor.cpp  st_printf.h
glslOpt/src/compiler/glsl/: glsl_parser_extras.cpp  glsl_parser_extras.h  ir_basic_block.cpp  linker.cpp  opt_dead_functions.cpp  standalone_scaffolding.cpp  standalone_scaffolding.h
glslOpt/src/compiler/glsl/glcpp/: glcpp-lex.c  glcpp-parse.c
glslOpt/src/mesa/main/: dd.h
glslOpt/src/util/: simple_mtx.h  u_string.h
shader_samples/: sample.frag  sample.glsl  sample.vert  sample_frag.conf  sample_vert.conf
src/: MainFrame.cpp  MainFrame.h
src/Gui/: GuiLayout.cpp  GuiLayout.h  ImGuiWidgets.cpp  ImGuiWidgets.h
src/Helper/: ImGuiThemeHelper.cpp  ImGuiThemeHelper.h  Messaging.cpp
src/Panes/: OptimizerPane.cpp  OptimizerPane.h  SourcePane.cpp  SourcePane.h  TargetPane.cpp  TargetPane.h
src/Project/: ProjectFile.cpp  ProjectFile.h
src/Res/: CustomFont.h
